--- a/fedbiscuit_script/tldr/tldr_rlhf_fedbiscuit_gemmasummarization.yaml
+++ b/fedbiscuit_script/tldr/tldr_rlhf_fedbiscuit_gemmasummarization.yaml
@@ -6,7 +6,7 @@ federate:
   mode: standalone
   client_num: 1
   total_round_num: 150
-  save_to: "checkpoints/tldr_rlhf_gemma_<choice_ckpt>.ckpt"
+  save_to: "checkpoints/tldr_rlhf_gemmasummarization_<choice_ckpt>.ckpt"
   save_freq: 50
   share_local_model: True
   online_aggr: False
@@ -31,7 +31,9 @@ llm:
 dataloader:
   batch_size: 4
 model:
-  type: 'mlabonne/Gemmalpaca-2B@huggingface_llm'
+  type: 'google/gemma-2b@huggingface_llm'
+  load_from_local_pretrained_fs_config: "fedbiscuit_script/tldr/tldr_sft_gemma.yaml"
+  load_from_local_pretrained_model_path: "checkpoints/final_tldr_sft_gemmasummarization.ckpt"
 train:
   local_update_steps: 30
   batch_or_epoch: batch
@@ -48,4 +50,4 @@ eval:
   metrics: ['loss', 'acc']
   best_res_update_round_wise_key: val_loss
   count_flops: False
-expname: tldr/rlhf_gemma/<choice_ckpt>
+expname: tldr/rlhf_gemmasummarization/<choice_ckpt>
