--- a/fedbiscuit_script/tldr/tldr_sft_gemma.yaml
+++ b/fedbiscuit_script/tldr/tldr_sft_gemma.yaml
@@ -5,14 +5,15 @@ early_stop:
 federate:
   mode: standalone
   client_num: 1
-  total_round_num: 500
-  save_to: "checkpoints/tldr_sft_gemma.ckpt"
-  save_freq: 100
+  total_round_num: 250
+  save_to: "checkpoints/final_tldr_sft_gemmasummarization.ckpt"
+  save_freq: 50
   share_local_model: True
   online_aggr: False
 data:
   root: data/
-  type: 'alpaca_reddit-tldr-finetuning@llm'
+  type: 'reddit-tldr-finetuning@llm'
+  # type: 'alpaca_reddit-tldr-finetuning@llm'
   splits: [0.9,0.09,0.01]
   splitter: 'iid'
 llm:
@@ -24,7 +25,7 @@ llm:
     max_len: 1024
   adapter:
     use: True
-    args: [ { 'adapter_package': 'peft', 'adapter_method': 'lora', 'r': 16, 'lora_alpha': 32, 'lora_dropout': 0.05 } ]
+    args: [ { 'adapter_package': 'peft', 'adapter_method': 'lora', 'r': 8, 'lora_alpha': 16, 'lora_dropout': 0.05 } ]
   grad_accum_step: 4
 dataloader:
   batch_size: 8
@@ -44,7 +45,7 @@ criterion:
 trainer:
   type: llmtrainer
 eval:
-  freq: 100
+  freq: 50
   metrics: ['loss', 'acc']
   best_res_update_round_wise_key: val_loss
   count_flops: False
